# extraire

./: .gitignore  Dockerfile  RAPPORT.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  test.yml
configs/: layout_config.yaml  ocr_config.yaml  stamp_detection.yaml
pipeline/: batch_processor.py
scripts/: annotate.py  train_classifier.py  train_stamp_detector.py
src/: cli.py  engine.py  text_extraction.py  webapp.py
src/classification/: __init__.py  document_classifier.py  pipelines.py
src/extraction/: layout_analysis.py  table_handling.py
src/postprocessing/: export.py  structure_data.py  text_cleaner.py
src/preprocessing/: image_enhancement.py  pdf_to_image.py
src/utils/: config_loader.py  logger.py
tests/: conftest.py  test_classification.py  test_export.py  test_pdf_processing.py  test_table_extraction.py
